--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -49,11 +49,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "10b9210f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "34\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fib(n):\n",
+    "    if n == 0:\n",
+    "        return 0\n",
+    "    elif n == 1:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return fib(n-1) + fib(n-2)\n",
+    "    \n",
+    "print(fib(9))  # 0(0) 1(1) 1(2) 2(3) 3(4) 5(5) 8(6) 13(7) 21(8) 34(9) ..."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -75,11 +93,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "eb033460",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "10\n",
+      "1100\n"
+     ]
+    }
+   ],
+   "source": [
+    "def to_binary(n):\n",
+    "    if n == 0:\n",
+    "        return \"0\"\n",
+    "    elif n == 1:\n",
+    "        return \"1\"\n",
+    "    else:\n",
+    "        return to_binary(n // 2) + str(n % 2)\n",
+    "    \"\"\"\n",
+    "    Converts an Integer into a Binary String\n",
+    "    0(0) 1(1) 2(10) 3(11) 4(100) 5(101) 6(110) 7(111) 8(1000) 9(1001) ...\n",
+    "    \"\"\"\n",
+    "\n",
+    "print(to_binary(0))   # \"0\"\n",
+    "print(to_binary(1))   # \"1\"   \n",
+    "print(to_binary(2))   # \"10\"\n",
+    "print(to_binary(12))  # \"1100\""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -121,7 +167,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.11"
   }
  },
