--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -153,11 +153,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5993ce51",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Task 1:\n",
+      "date_in          0\n",
+      "last_name        0\n",
+      "gender           0\n",
+      "year             0\n",
+      "first_name       4\n",
+      "age             50\n",
+      "profession    1019\n",
+      "disease       3087\n",
+      "children      9547\n",
+      "dtype: int64\n",
+      "Columns by fewest NA -> most NA::\n",
+      " ['date_in', 'last_name', 'gender', 'year', 'first_name', 'age', 'profession', 'disease', 'children']\n",
+      "\n",
+      "\n",
+      "Task 2:\n",
+      "   year  total_admissions\n",
+      "0  1846              3073\n",
+      "1  1847              6511\n",
+      "\n",
+      "\n",
+      "Task 3 (avg age by gender):\n",
+      "gender\n",
+      "m    31.813433\n",
+      "w    28.725162\n",
+      "Name: age, dtype: float64\n",
+      "\n",
+      "\n",
+      "Task 4:\n",
+      "TOP 5 professions: ['laborer', 'married', 'spinster', 'widow', 'shoemaker']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "url = 'https://github.com/melaniewalsh/Intro-Cultural-Analytics/raw/master/book/data/bellevue_almshouse_modified.csv'\n",
+    "df_bellevue = pd.read_csv(url)\n",
+    "\n",
+    "df_bellevue[\"date_in\"] = pd.to_datetime(df_bellevue[\"date_in\"], errors=\"coerce\")\n",
+    "df_bellevue[\"year\"] = df_bellevue[\"date_in\"].dt.year\n",
+    "\n",
+    "def task_1():\n",
+    "    \"\"\"\n",
+    "    Return a list of all column names in df_bellevue\n",
+    "    Sorted by the number of NA values in each column, from fewest NA values to most NA values.\n",
+    "    \"\"\"\n",
+    "    return df_bellevue.isna().sum().sort_values().index.tolist()\n",
+    "\n",
+    "print(\"Task 1:\")\n",
+    "print(df_bellevue.isna().sum().sort_values())\n",
+    "print(\"Columns by fewest NA -> most NA::\\n\", task_1())\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "def task_2():\n",
+    "    \"\"\"\n",
+    "    Return total number of entries for each year：\n",
+    "    - year\n",
+    "    - total_admissions\n",
+    "    \"\"\"\n",
+    "    output = (\n",
+    "        df_bellevue\n",
+    "        .dropna(subset=[\"year\"])                # year is NaN for some rows\n",
+    "        .groupby(\"year\", as_index=False)\n",
+    "        .size()\n",
+    "        .rename(columns={\"size\": \"total_admissions\"})\n",
+    "        .sort_values(\"year\")\n",
+    "        .reset_index(drop=True)\n",
+    "    )\n",
+    "    return output\n",
+    "\n",
+    "print(\"Task 2:\")\n",
+    "print(task_2().head())\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "def task_3():\n",
+    "    \"\"\"\n",
+    "    Return the average age of genders \"m\" and \"w\"\n",
+    "    as a Series indexed by\n",
+    "    \"\"\"\n",
+    "    tmp = df_bellevue.copy()\n",
+    "    tmp[\"age\"] = pd.to_numeric(tmp[\"age\"], errors=\"coerce\")\n",
+    "    tmp[\"gender\"] = tmp[\"gender\"].str.lower().str.strip() # normalize\n",
+    "    tmp.loc[~tmp[\"gender\"].isin([\"m\", \"w\"]), \"gender\"] = pd.NA # only keep \"m\" and \"w\", set others to NA\n",
+    "    return tmp.groupby(\"gender\")[\"age\"].mean()\n",
+    "\n",
+    "print(\"Task 3 (avg age by gender):\")\n",
+    "print(task_3())\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "def task_4():\n",
+    "    \"\"\"\n",
+    "    Return TOP 5 profession\n",
+    "    \"\"\"\n",
+    "    return (\n",
+    "        df_bellevue[\"profession\"]\n",
+    "        .dropna()\n",
+    "        .astype(str)\n",
+    "        .str.strip()\n",
+    "        .value_counts()\n",
+    "        .head(5)\n",
+    "        .index\n",
+    "        .tolist()\n",
+    "    )\n",
+    "\n",
+    "print(\"Task 4:\")\n",
+    "print(\"TOP 5 professions:\", task_4())"
+   ]
   }
  ],
  "metadata": {
