--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "id": "10b9210f",
    "metadata": {},
    "outputs": [
@@ -62,13 +62,7 @@
     }
    ],
    "source": [
-    "def fib(n):\n",
-    "    if n == 0:\n",
-    "        return 0\n",
-    "    elif n == 1:\n",
-    "        return 1\n",
-    "    else:\n",
-    "        return fib(n-1) + fib(n-2)\n",
+    "from apputil import fib\n",
     "    \n",
     "print(fib(9))  # 0(0) 1(1) 1(2) 2(3) 3(4) 5(5) 8(6) 13(7) 21(8) 34(9) ..."
    ]
@@ -93,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "eb033460",
    "metadata": {},
    "outputs": [
@@ -109,17 +103,10 @@
     }
    ],
    "source": [
-    "def to_binary(n):\n",
-    "    if n == 0:\n",
-    "        return \"0\"\n",
-    "    elif n == 1:\n",
-    "        return \"1\"\n",
-    "    else:\n",
-    "        return to_binary(n // 2) + str(n % 2)\n",
-    "    \"\"\"\n",
-    "    Converts an Integer into a Binary String\n",
-    "    0(0) 1(1) 2(10) 3(11) 4(100) 5(101) 6(110) 7(111) 8(1000) 9(1001) ...\n",
-    "    \"\"\"\n",
+    "import importlib, apputil\n",
+    "importlib.reload(apputil) #need to reload\n",
+    "\n",
+    "from apputil import to_binary\n",
     "\n",
     "print(to_binary(0))   # \"0\"\n",
     "print(to_binary(1))   # \"1\"   \n",
@@ -153,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "5993ce51",
    "metadata": {},
    "outputs": [
@@ -171,31 +158,28 @@
       "profession    1019\n",
       "disease       3087\n",
       "children      9547\n",
-      "dtype: int64\n",
-      "Columns by fewest NA -> most NA::\n",
-      " ['date_in', 'last_name', 'gender', 'year', 'first_name', 'age', 'profession', 'disease', 'children']\n",
-      "\n",
-      "\n",
-      "Task 2:\n",
-      "   year  total_admissions\n",
-      "0  1846              3073\n",
-      "1  1847              6511\n",
-      "\n",
-      "\n",
-      "Task 3 (avg age by gender):\n",
-      "gender\n",
-      "m    31.813433\n",
-      "w    28.725162\n",
-      "Name: age, dtype: float64\n",
-      "\n",
-      "\n",
-      "Task 4:\n",
-      "TOP 5 professions: ['laborer', 'married', 'spinster', 'widow', 'shoemaker']\n"
+      "dtype: int64\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'df_bellevue' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[21]\u001b[39m\u001b[32m, line 16\u001b[39m\n\u001b[32m     14\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mTask 1:\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     15\u001b[39m \u001b[38;5;28mprint\u001b[39m(df_bellevue.isna().sum().sort_values())\n\u001b[32m---> \u001b[39m\u001b[32m16\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mColumns by fewest NA -> most NA::\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m\"\u001b[39m, \u001b[43mtask_1\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[32m     17\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m     21\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mTask 2:\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/workspaces/week-3/apputil.py:32\u001b[39m, in \u001b[36mtask_1\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m     27\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mtask_1\u001b[39m():\n\u001b[32m     28\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m     29\u001b[39m \u001b[33;03m    Return a list of all column names in df_bellevue\u001b[39;00m\n\u001b[32m     30\u001b[39m \u001b[33;03m    Sorted by the number of NA values in each column, from fewest NA values to most NA values.\u001b[39;00m\n\u001b[32m     31\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m32\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mdf_bellevue\u001b[49m.isna().sum().sort_values().index.tolist()\n",
+      "\u001b[31mNameError\u001b[39m: name 'df_bellevue' is not defined"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
+    "import importlib, apputil\n",
+    "importlib.reload(apputil) #need to reload\n",
+    "\n",
+    "from apputil import task_1, task_2, task_3,  task_4\n",
     "\n",
     "url = 'https://github.com/melaniewalsh/Intro-Cultural-Analytics/raw/master/book/data/bellevue_almshouse_modified.csv'\n",
     "df_bellevue = pd.read_csv(url)\n",
@@ -203,68 +187,18 @@
     "df_bellevue[\"date_in\"] = pd.to_datetime(df_bellevue[\"date_in\"], errors=\"coerce\")\n",
     "df_bellevue[\"year\"] = df_bellevue[\"date_in\"].dt.year\n",
     "\n",
-    "def task_1():\n",
-    "    \"\"\"\n",
-    "    Return a list of all column names in df_bellevue\n",
-    "    Sorted by the number of NA values in each column, from fewest NA values to most NA values.\n",
-    "    \"\"\"\n",
-    "    return df_bellevue.isna().sum().sort_values().index.tolist()\n",
-    "\n",
     "print(\"Task 1:\")\n",
     "print(df_bellevue.isna().sum().sort_values())\n",
     "print(\"Columns by fewest NA -> most NA::\\n\", task_1())\n",
     "print(\"\\n\")\n",
     "\n",
-    "def task_2():\n",
-    "    \"\"\"\n",
-    "    Return total number of entries for each year：\n",
-    "    - year\n",
-    "    - total_admissions\n",
-    "    \"\"\"\n",
-    "    output = (\n",
-    "        df_bellevue\n",
-    "        .dropna(subset=[\"year\"])                # year is NaN for some rows\n",
-    "        .groupby(\"year\", as_index=False)\n",
-    "        .size()\n",
-    "        .rename(columns={\"size\": \"total_admissions\"})\n",
-    "        .sort_values(\"year\")\n",
-    "        .reset_index(drop=True)\n",
-    "    )\n",
-    "    return output\n",
-    "\n",
     "print(\"Task 2:\")\n",
     "print(task_2().head())\n",
     "print(\"\\n\")\n",
     "\n",
-    "def task_3():\n",
-    "    \"\"\"\n",
-    "    Return the average age of genders \"m\" and \"w\"\n",
-    "    as a Series indexed by\n",
-    "    \"\"\"\n",
-    "    tmp = df_bellevue.copy()\n",
-    "    tmp[\"age\"] = pd.to_numeric(tmp[\"age\"], errors=\"coerce\")\n",
-    "    tmp[\"gender\"] = tmp[\"gender\"].str.lower().str.strip() # normalize\n",
-    "    tmp.loc[~tmp[\"gender\"].isin([\"m\", \"w\"]), \"gender\"] = pd.NA # only keep \"m\" and \"w\", set others to NA\n",
-    "    return tmp.groupby(\"gender\")[\"age\"].mean()\n",
-    "\n",
     "print(\"Task 3 (avg age by gender):\")\n",
     "print(task_3())\n",
     "print(\"\\n\")\n",
-    "\n",
-    "def task_4():\n",
-    "    \"\"\"\n",
-    "    Return TOP 5 profession\n",
-    "    \"\"\"\n",
-    "    return (\n",
-    "        df_bellevue[\"profession\"]\n",
-    "        .dropna()\n",
-    "        .astype(str)\n",
-    "        .str.strip()\n",
-    "        .value_counts()\n",
-    "        .head(5)\n",
-    "        .index\n",
-    "        .tolist()\n",
-    "    )\n",
     "\n",
     "print(\"Task 4:\")\n",
     "print(\"TOP 5 professions:\", task_4())"
