--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "5993ce51",
    "metadata": {},
    "outputs": [
@@ -149,28 +149,25 @@
      "output_type": "stream",
      "text": [
       "Task 1:\n",
-      "date_in          0\n",
-      "last_name        0\n",
-      "gender           0\n",
-      "year             0\n",
-      "first_name       4\n",
-      "age             50\n",
-      "profession    1019\n",
-      "disease       3087\n",
-      "children      9547\n",
-      "dtype: int64\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'df_bellevue' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[21]\u001b[39m\u001b[32m, line 16\u001b[39m\n\u001b[32m     14\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mTask 1:\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     15\u001b[39m \u001b[38;5;28mprint\u001b[39m(df_bellevue.isna().sum().sort_values())\n\u001b[32m---> \u001b[39m\u001b[32m16\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mColumns by fewest NA -> most NA::\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m\"\u001b[39m, \u001b[43mtask_1\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[32m     17\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m     21\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mTask 2:\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/workspaces/week-3/apputil.py:32\u001b[39m, in \u001b[36mtask_1\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m     27\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mtask_1\u001b[39m():\n\u001b[32m     28\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m     29\u001b[39m \u001b[33;03m    Return a list of all column names in df_bellevue\u001b[39;00m\n\u001b[32m     30\u001b[39m \u001b[33;03m    Sorted by the number of NA values in each column, from fewest NA values to most NA values.\u001b[39;00m\n\u001b[32m     31\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m32\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mdf_bellevue\u001b[49m.isna().sum().sort_values().index.tolist()\n",
-      "\u001b[31mNameError\u001b[39m: name 'df_bellevue' is not defined"
+      "Columns by fewest NA -> most NA::\n",
+      " ['date_in', 'last_name', 'gender', 'year', 'first_name', 'age', 'profession', 'disease', 'children']\n",
+      "\n",
+      "\n",
+      "Task 2:\n",
+      "   year  total_admissions\n",
+      "0  1846              3073\n",
+      "1  1847              6511\n",
+      "\n",
+      "\n",
+      "Task 3 (avg age by gender):\n",
+      "gender\n",
+      "m    31.813433\n",
+      "w    28.725162\n",
+      "Name: age, dtype: float64\n",
+      "\n",
+      "\n",
+      "Task 4:\n",
+      "TOP 5 professions: ['laborer', 'married', 'spinster', 'widow', 'shoemaker']\n"
      ]
     }
    ],
@@ -187,21 +184,22 @@
     "df_bellevue[\"date_in\"] = pd.to_datetime(df_bellevue[\"date_in\"], errors=\"coerce\")\n",
     "df_bellevue[\"year\"] = df_bellevue[\"date_in\"].dt.year\n",
     "\n",
+    "\n",
     "print(\"Task 1:\")\n",
-    "print(df_bellevue.isna().sum().sort_values())\n",
-    "print(\"Columns by fewest NA -> most NA::\\n\", task_1())\n",
+    "#print(df_bellevue.isna().sum().sort_values())\n",
+    "print(\"Columns by fewest NA -> most NA::\\n\", task_1(df_bellevue))\n",
     "print(\"\\n\")\n",
     "\n",
     "print(\"Task 2:\")\n",
-    "print(task_2().head())\n",
+    "print(task_2(df_bellevue).head())\n",
     "print(\"\\n\")\n",
     "\n",
     "print(\"Task 3 (avg age by gender):\")\n",
-    "print(task_3())\n",
+    "print(task_3(df_bellevue))\n",
     "print(\"\\n\")\n",
     "\n",
     "print(\"Task 4:\")\n",
-    "print(\"TOP 5 professions:\", task_4())"
+    "print(\"TOP 5 professions:\", task_4(df_bellevue))"
    ]
   }
  ],
