fib to fibonacci

--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "id": "10b9210f",
    "metadata": {},
    "outputs": [
@@ -62,9 +62,9 @@
     }
    ],
    "source": [
-    "from apputil import fib\n",
+    "from apputil import fibonacci\n",
     "    \n",
-    "print(fib(9))  # 0(0) 1(1) 1(2) 2(3) 3(4) 5(5) 8(6) 13(7) 21(8) 34(9) ..."
+    "print(fibonacci(9))  # 0(0) 1(1) 1(2) 2(3) 3(4) 5(5) 8(6) 13(7) 21(8) 34(9) ..."
    ]
   },
   {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "eb033460",
    "metadata": {},
    "outputs": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "id": "5993ce51",
    "metadata": {},
    "outputs": [
