--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "5993ce51",
    "metadata": {},
    "outputs": [
@@ -176,30 +176,31 @@
     "import importlib, apputil\n",
     "importlib.reload(apputil) #need to reload\n",
     "\n",
-    "from apputil import task_1, task_2, task_3,  task_4\n",
+    "from apputil import task_1, task_2, task_3, task_4\n",
     "\n",
+    "'''\n",
     "url = 'https://github.com/melaniewalsh/Intro-Cultural-Analytics/raw/master/book/data/bellevue_almshouse_modified.csv'\n",
     "df_bellevue = pd.read_csv(url)\n",
     "\n",
     "df_bellevue[\"date_in\"] = pd.to_datetime(df_bellevue[\"date_in\"], errors=\"coerce\")\n",
     "df_bellevue[\"year\"] = df_bellevue[\"date_in\"].dt.year\n",
-    "\n",
+    "'''\n",
     "\n",
     "print(\"Task 1:\")\n",
     "#print(df_bellevue.isna().sum().sort_values())\n",
-    "print(\"Columns by fewest NA -> most NA::\\n\", task_1(df_bellevue))\n",
+    "print(\"Columns by fewest NA -> most NA::\\n\", task_1())\n",
     "print(\"\\n\")\n",
     "\n",
     "print(\"Task 2:\")\n",
-    "print(task_2(df_bellevue).head())\n",
+    "print(task_2().head())\n",
     "print(\"\\n\")\n",
     "\n",
     "print(\"Task 3 (avg age by gender):\")\n",
-    "print(task_3(df_bellevue))\n",
+    "print(task_3())\n",
     "print(\"\\n\")\n",
     "\n",
     "print(\"Task 4:\")\n",
-    "print(\"TOP 5 professions:\", task_4(df_bellevue))"
+    "print(\"TOP 5 professions:\", task_4())\n"
    ]
   }
  ],
