--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "5993ce51",
    "metadata": {},
    "outputs": [
@@ -150,7 +150,7 @@
      "text": [
       "Task 1:\n",
       "Columns by fewest NA -> most NA::\n",
-      " ['date_in', 'last_name', 'gender', 'first_name', 'age', 'profession', 'disease', 'children']\n",
+      " ['date_in', 'last_name', 'first_name', 'gender', 'age', 'profession', 'disease', 'children']\n",
       "\n",
       "\n",
       "Task 2:\n",
